# bin/Release/net6.0/swagger.json
@@ -147,21 +147,13 @@
           "200": {
             "description": "Success",
             "schema": {
-              "$ref": "#/definitions/Account"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Account"
+              }
             }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
-        },
-        "security": [
-          {
-            "oauth2": [ ]
-          }
-        ]
+        }
       }
     },
     "/Account/Create": {
@@ -238,19 +230,8 @@
         "responses": {
           "200": {
             "description": "Success"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
-        },
-        "security": [
-          {
-            "oauth2": [ ]
-          }
-        ]
+        }
       }
     },
     "/Account/Delete/{id}": {
@@ -839,7 +820,10 @@
           "200": {
             "description": "Success",
             "schema": {
-              "$ref": "#/definitions/NotifiHistory"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/NotifiHistory"
+              }
             }
           }
         }
@@ -1214,6 +1198,53 @@
         }
       }
     },
+    "/SubAccount/SortByPhone/{id}": {
+      "post": {
+        "tags": [
+          "SubAccount"
+        ],
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/SortDTO"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/SortDTO"
+              }
+            }
+          }
+        }
+      }
+    },
     "/SubAccount/Create": {
       "post": {
         "tags": [
@@ -1309,19 +1340,8 @@
         "responses": {
           "200": {
             "description": "Success"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
-        },
-        "security": [
-          {
-            "oauth2": [ ]
-          }
-        ]
+        }
       }
     },
     "/WeatherForecast": {
@@ -1628,6 +1648,18 @@
           "items": {
             "$ref": "#/definitions/Account"
           }
+        }
+      },
+      "additionalProperties": false
+    },
+    "SortDTO": {
+      "type": "object",
+      "properties": {
+        "subAccountName": {
+          "type": "string"
+        },
+        "subAccountPhone": {
+          "type": "string"
         }
       },
       "additionalProperties": false
